--- a/index.html
+++ b/index.html
@@ -16,16 +16,21 @@
 
 	<title>My Website Title</title>
 
+<style>
+body{
+	background-color:#c0c0c0;
+	}
+	
+</style>
+	
 </head>
 
 
 <body>
 
 	<!-- Header -->
-	<h1>sam's game</h1>
+	<li style="font-size:16px; font-family:Garamond">ashley's game.</li>
 
-	<!-- Your website content here -->
-	<p>This is just a template for you to have something to start with.</p>
 
 </body>
 
