--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 
-	<title>My Website Title</title>
+	<title>Eyes?</title>
 
 </head>
 
@@ -22,10 +22,7 @@
 <body>
 
 	<!-- Header -->
-	<h1>sam's game</h1>
-
-	<!-- Your website content here -->
-	<p>This is just a template for you to have something to start with.</p>
+	<li style="font-size:16px; font-family:Garamond">ashley's game.</li>
 
 </body>
 
