--- a/index.html
+++ b/index.html
@@ -29,11 +29,7 @@ body{
 <body>
 
 	<!-- Header -->
-	<li style="font-size:16px; font-family:Garamond">ashley's game.</li>
-<<<<<<< HEAD
-=======
-
->>>>>>> ef98ab7079ad23ac0f0efbf54b5899848aa9cf6f
+	<h1 style="font-family:Garamond;">ashley's game.</h1>
 
 </body>
 
